...
          paddingBottom: theme.spacing['3'],
        }}
      >
        <Button
          label={tt('list.create')}
          onPress={() => router.push('/takim/yeni')}
          testID="teams-create"
          style={{ flex: 1 }}
        />
        <Button
          label={tt('list.join')}
          variant="secondary"
          onPress={() => router.push('/takim/katil')}
...
